# pyamp

./: LICENSE  README.md  pyamp.py  pyproject.toml
gui/: app.py  utils.py
gui/components/: button.py  label.py  main_window.py  slider.py  spectrum.py
player/: player.py  player_interface.py
skins/classic_mac/: EQNORMAL.CUR  EQTITLE.CUR  MIN.CUR  PCLOSE.CUR  PLEDIT.TXT  PSIZE.CUR  PVSCROLL.CUR  PWSSIZE.CUR  VISCOLOR.TXT
